--- a/E-Admin/app/src/main/AndroidManifest.xml
+++ b/E-Admin/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drwaeble"
+        android:icon="@drawable/bp_batam_app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
